--- a/info/index.org
+++ b/info/index.org
@@ -2,7 +2,7 @@
 #+OPTIONS: author:t c:nil creator:comment d:(not "LOGBOOK") date:t
 #+OPTIONS: e:t email:t f:t inline:t num:t p:nil pri:nil prop:nil
 #+OPTIONS: stat:t tags:t tasks:t tex:t timestamp:t toc:nil todo:t |:t
-#+DATE: Time-stamp: <2021-09-09>
+#+DATE: Time-stamp: <2021-09-12>
 #+TITLE: The Comprehensive APDL-Mode Documentation
 #+AUTHOR: H. Dieter Wilhelm
 #+EMAIL: dieter@duenenhof-wilhelm.de
@@ -47,7 +47,7 @@
 ** In-depth
   - HTML: [[file:doc/A-M_in-depth_tutorial.org][In-depth Tutorial]]
 * Reference Manuals
-  - HTML: The Apdl-Mode [[file:doc/A-M_APDL_reference.org][Highlighting and APDL reference]].
+  - HTML: The APDL-Mode [[file:doc/A-M_APDL_reference.org][Highlighting and APDL reference]].
   - HTML: [[file:matlib/README.org][APDL-Mode material library]].
 -----
 
